--- a/package.json
+++ b/package.json
@@ -19,5 +19,20 @@
   "bugs": {
     "url": "https://github.com/ocgears/omnifilter/issues"
   },
-  "homepage": "https://github.com/ocgears/omnifilter#readme"
+  "homepage": "https://github.com/ocgears/omnifilter#readme",
+  "dependencies": {
+    "assert": "^1.3.0",
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "bluebird": "^3.3.4",
+    "ffi": "^2.0.0",
+    "html-loader": "^0.4.3",
+    "jpeg-js": "^0.1.1",
+    "lodash": "^4.6.1",
+    "nooocl": "^0.11.0",
+    "path": "^0.12.7",
+    "ref": "^1.3.2",
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.14"
+  }
 }
