--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-loader": "^0.4.3",
     "jpeg-js": "^0.1.1",
     "lodash": "^4.6.1",
+    "lwip": "0.0.8",
     "nooocl": "^0.11.0",
     "path": "^0.12.7",
     "ref": "^1.3.2",
