--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "assert": "^1.3.0",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
+    "bcrypt": "^0.8.5",
     "bluebird": "^3.3.4",
+    "express": "^4.13.4",
     "ffi": "^2.0.0",
     "html-loader": "^0.4.3",
     "jpeg-js": "^0.1.1",
+    "jsonwebtoken": "^5.7.0",
     "lodash": "^4.6.1",
     "lwip": "0.0.8",
+    "mongoose": "^4.4.6",
     "nooocl": "^0.11.0",
     "path": "^0.12.7",
     "ref": "^1.3.2",
