--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/ocgears/omnifilter#readme",
   "dependencies": {
+    "angular-route": "^1.5.0",
     "assert": "^1.3.0",
     "babel-core": "^6.6.5",
     "babel-loader": "^6.2.4",
