--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bluebird": "^3.3.4",
     "express": "^4.13.4",
     "ffi": "^2.0.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "html-loader": "^0.4.3",
     "jpeg-js": "^0.1.1",
     "jsonwebtoken": "^5.7.0",
@@ -34,7 +36,8 @@
     "path": "^0.12.7",
     "ref": "^1.3.2",
     "underscore": "^1.8.3",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-stream": "^3.1.0"
   },
   "devDependencies": {
     "jshint": "2.9.1"
